--- a/CareerCounselling/Web.config
+++ b/CareerCounselling/Web.config
@@ -33,6 +33,17 @@
       </namespaces>
     </pages>
   </system.web>
+  <system.net>
+  <mailSettings>
+    <smtp from="you@outlook.com">
+      <network host="smtp.gmail.com" 
+               port="587" 
+               userName="sujeet.kumar216@gmail.com"
+               password="sujeetmodi" 
+               enableSsl="true" />
+    </smtp>
+  </mailSettings>
+</system.net>
   <system.webServer>
     <validation validateIntegratedModeConfiguration="false" />
     <handlers>
